# DestinyEngine

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  DestinyEngine.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  build.py  cmake_build.py  cmakegen.bat  mingw-w64.cmake  premake.bat  premake5.lua  run.py
.github/workflows/: checks.yml  clang-format.yml  codeql.yml
DestinyEngine/: CMakeLists.txt  CleanShaderOutputs.vcxproj  Dependencies.cpp  Dependencies.lua  DestinyEngine.vcxproj  DestinyEngine.vcxproj.filters  ShaderCompiler.lua  ShaderCompiler.props  ShaderCompiler.targets  ShaderCompiler.xml  premake5.lua
DestinyEngine/include/: DestinyEngine.hpp
DestinyEngine/src/: Dependencies.hpp  dtpch.cpp  dtpch.hpp
DestinyEngine/src/Destiny/: Application.cpp  Application.hpp  EntryPoint.hpp  Exception.cpp  Exception.hpp  Input.hpp  KeyCodes.hpp  Log.cpp  Log.hpp  Macros.hpp  MouseCodes.hpp  Window.hpp
DestinyEngine/src/Destiny/Events/: Event.hpp  EventListener.hpp  KeyboardEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
DestinyEngine/src/Destiny/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
DestinyEngine/src/Destiny/Layer/: Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
DestinyEngine/src/Destiny/Platform/D3D11/: D3D11Buffer.cpp  D3D11Buffer.hpp  D3D11Context.cpp  D3D11Context.hpp  D3D11Exception.cpp  D3D11Exception.hpp  DxgiInfoManager.cpp  DxgiInfoManager.hpp
DestinyEngine/src/Destiny/Platform/Windows/: Win32Exception.cpp  Win32Exception.hpp  Win32KeyCodes.hpp  Win32MouseCodes.hpp  WindowsInput.cpp  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.hpp
DestinyEngine/src/Destiny/Renderer/: Buffer.cpp  Buffer.hpp  GraphicsContext.hpp
DestinyEngine/src/Shaders/: another_shader.glsl  test_shader.glsl
Sandbox/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Sandbox.sln  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  premake5.lua
Sandbox/resources/: manifest.rc
Sandbox/src/: SandboxApp.cpp
bin-int/Debug-windows-x86_64/CleanShaderOutputs/: CleanShaderOutputs.recipe  _IsIncrementalBuild
bin-int/Debug-windows-x86_64/DestinyEngine/: _IsIncrementalBuild
bin-int/Debug-windows-x86_64/ImGui/: _IsIncrementalBuild
bin-int/Debug-windows-x86_64/Sandbox/: Sandbox.exe.recipe  vc143.idb
bin-int/Debug-windows-x86_64/fmt/: _IsIncrementalBuild
bin-int/Debug-windows-x86_64/spdlog/: _IsIncrementalBuild
